k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
  type: LoadBalancer
